--- a/java/war/src/main/webapp/index.html
+++ b/java/war/src/main/webapp/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <body>
-    <h2>Welcome to Hello Servlet</h2>
+    <h2>Welcome to Actuator Servlet</h2>
     <p>
-        <a href="servlet">Click here</a> to get a greeting from the Hello Servlet.
+        <a href="/actuator/health">Click here</a> to get a greeting from the Actuator Servlet.
     </p>
 </body>
 
